[package]
name = "leptos_image_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usvg = "0.36.0"
image = { version = "0.24.7", optional = true }
serde = { version = "1.0.189", features = ["derive"] }
serde_qs = "0.12.0"
log = { version = "0.4.20", optional = true }
rsvg = "0.4.0"
cairo-rs = "0.4.1"

[dependencies.nsvg]
version = "0.5.1"
default-features = false

